--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
-  "name": "emitter-api",
-  "version": "1.0.0",
-  "description": "Test API that will be emmiting events",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BrunoSantiG/EmitterApi.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BrunoSantiG/EmitterApi/issues"
-  },
-  "homepage": "https://github.com/BrunoSantiG/EmitterApi#readme",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^2.0.2"
-  }
+	"name": "emitter-api",
+	"version": "1.0.0",
+	"description": "Test API that will be emmiting events",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"dev": "nodemon src/server.js --ignore tests",
+		"pretest": "cross-env NODE_ENV=test sequelize db:migrate",
+		"test": "cross-env NODE_ENV=test jest",
+		"posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/BrunoSantiG/EmitterApi.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/BrunoSantiG/EmitterApi/issues"
+	},
+	"homepage": "https://github.com/BrunoSantiG/EmitterApi#readme",
+	"dependencies": {
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mysql2": "^2.1.0",
+		"sequelize": "^5.21.5",
+		"sequelize-cli": "^5.5.1"
+	},
+	"devDependencies": {
+		"cross-env": "^7.0.2",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.0",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-node": "^11.0.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-stan,dard": "^4.0.1",
+		"jest": "^25.1.0",
+		"nodemon": "^2.0.2",
+		"sqlite3": "^4.1.1",
+		"supertest": "^4.0.2"
+	}
 }
