[+] Controller, Service and Repository pattern

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,13 @@
 				"named": "never",
 				"asyncArrow": "always"
 			}
+		],
+		"prefer-const": [
+			"error",
+			{
+				"destructuring": "any",
+				"ignoreReadBeforeAssign": false
+			}
 		]
 	}
 }
