--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "node src/server.js",
 		"dev": "nodemon src/server.js --ignore tests",
 		"pretest": "cross-env NODE_ENV=test sequelize db:migrate",
-		"test": "cross-env NODE_ENV=test jest",
+		"test": "cross-env NODE_ENV=test jest --runInBand",
 		"posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
 	},
 	"repository": {
