--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-stan,dard": "^4.0.1",
+		"eslint-plugin-standard": "^4.0.1",
+		"faker": "^4.1.0",
 		"jest": "^25.1.0",
 		"nodemon": "^2.0.2",
 		"sqlite3": "^4.1.1",
