--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/BrunoSantiG/EmitterApi#readme",
 	"dependencies": {
+		"@azure/service-bus": "^1.1.3",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mysql2": "^2.1.0",
