--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/BrunoSantiG/EmitterApi#readme",
 	"dependencies": {
+		"@azure/service-bus": "^1.1.3",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mysql2": "^2.1.0",
@@ -34,7 +35,8 @@
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-stan,dard": "^4.0.1",
+		"eslint-plugin-standard": "^4.0.1",
+		"faker": "^4.1.0",
 		"jest": "^25.1.0",
 		"nodemon": "^2.0.2",
 		"sqlite3": "^4.1.1",
